feat(traefix): update config
Disable `providers.docker.exposedByDefault` option

--- a/traefik/traefik.yml
+++ b/traefik/traefik.yml
@@ -16,4 +16,4 @@ api:
 providers:
   docker:
     defaultRule: Host(`{{ normalize .Name }}.docker.localhost`)
-    exposedByDefault: true
+    exposedByDefault: false
