refactor(traefik): use ports instead of host network for docker desktop support

--- a/.editorconfig
+++ b/.editorconfig
@@ -11,5 +11,5 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[**.{js, ts, jsx, tsx, md, less, css, sass, scss, json, yaml, yml}]
+[*.{js,ts,jsx,tsx,md,less,css,sass,scss,json,yaml,yml}]
 indent_size = 2
